--- a/Lab14 SpoonPool/Lab14 SpoonPool.csproj
+++ b/Lab14 SpoonPool/Lab14 SpoonPool.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="SpoonPool.cs" />
+    <Compile Include="SingleSpoon.cs" />
+    <Compile Include="Spoons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
